# Start

./: CMakeCache.txt  CMakeLists.txt  CT_erase_min_array.cpp  FILE_READ_FOR_DEBUG.c  FILE_READ_FOR_DEBUG.h  LIB_MAT.c  LIB_MAT.h  MODEL_CODE.out  Makefile  README.md  STD_LIB.c  STD_LIB.h  cmake_install.cmake  first.out  functional_code.c  functional_code.h  in.txt  main.c  out.txt  readme.pptx  typedef.h  typedefs.h
