CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(MODEL_SIMULINK)

SET(SOURCES FILE_READ_FOR_DEBUG.c functional_code.c STD_LIB.c main.c)
SET(HEADERS typedefs.h STD_LIB.h FILE_READ_FOR_DEBUG.h functional_code.h)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
ADD_EXECUTABLE(MODEL_CODE.out ${SOURCES} ${HEADERS} )